<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:padding="30dip"
	android:orientation="horizontal"
	>
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    >
		<TextView
			android:text="@string/home_screen_title"  
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_marginBottom="25dip"
		    android:textSize="24.5sp"
		    />
		<Button
			android:id="@+id/new_msg_btn"
    		android:text="@string/new_msg_btn_txt"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    />
		<Button
			android:id="@+id/sent_msgs_btn"
			android:text="@string/sent_msgs_btn_txt"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			/>
		<Button
			android:id="@+id/help_btn"
			android:text="@string/help_btn_txt"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			/>
		<Button
			android:id="@+id/about_btn"
			android:text="@string/about_btn_txt"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			/>
		<Button
			android:id="@+id/exit_app_btn"
			android:text="@string/exit_btn_txt"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			/>
	</LinearLayout>
</LinearLayout>