<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="4dip"
	android:background="@color/background">
	<TextView 
		android:text="enter phone number to send to:"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	
	<EditText
  		android:id="@+id/phone_num_to_send_to"
  		android:inputType="phone"
  		android:text="@string/tophonenum"
  		android:maxLength="10"
  		android:lines="1"
  		android:cursorVisible="true"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:gravity="left"
  		android:editable="false"
  		android:enabled="false"
  		android:paddingBottom="2dip"/>
  		
	<TextView 
		android:text="type info to send (max 140 chars):"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>	
	<EditText
  		android:id="@+id/new_msg_text"
  		android:inputType="textMultiLine"
  		android:lines="10"
  		android:maxLength="130"
  		android:cursorVisible="true"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content" 
  		android:scrollbars="vertical"/>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center">
		<Button
	  		android:id="@+id/send_msg_btn"
	  		android:text="@string/send_msg_btn_txt" 
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:gravity="center" />
	  	<!-- <Button
	  		android:id="@+id/save_msg_btn"
	  		android:text="@string/save_msg_btn_txt" 
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:gravity="center"/> -->
	  	<Button
	  		android:id="@+id/back_home_btn"
	  		android:text="@string/back_home_btn_txt" 
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:gravity="center" />	
	</LinearLayout>
</LinearLayout>